# homework-30

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
htmlcov/: index.html
lms/: admin.py  models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_link.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_updated_at_lesson_updated_at.py
redis_data/: dump.rdb
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_amount.py  0004_alter_payment_options_alter_payment_amount_and_more.py  0005_payment_link_payment_session_id.py  0006_alter_payment_link.py
