[tool.poetry]
name = "homework-30"
version = "0.1.0"
description = ""
authors = ["Anna <azeleranskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
