[tool.poetry]
name = "homework-30"
version = "0.1.0"
description = ""
authors = ["Anna <azeleranskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.10.6"
drf-yasg = "^1.21.10"
stripe = "^12.5.1"
celery = "^5.5.3"
redis = "^6.4.0"
django-celery-beat = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
